--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^0.100.2",
+    "ng-circle-progress": "^0.9.8",
     "node": "^9.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
